# jamengine

./: .gitignore  ACKNOLEDGEMENTS.txt  CMakeLists.txt  LICENSE  README.md
jam/: ACKNOLEDGEMENTS.txt  CMakeLists.txt  TODO.txt
jam/include/jam/: Achievement.h  Action.h  ActionEase.h  ActionInstant.h  ActionInterval.h  ActionManager.h  AliveSprite.h  Anim2d.h  Animation2dManager.h  Application.h  AudioManager.h  AutoReleasePool.h  B2Sprite.h  Bank.h  BankItem.h  BankItemHolder.h  Base64.h  BaseManager.hpp  ButtonNode.h  Camera.h  Circle2f.h  CollisionManager.h  Color.h  Component.h  Configurator.h  DeviceManager.h  Dir.h  Draw2d.h  Draw3dBatch.h  Draw3dManager.h  DrawItem.h  DrawItemManager.h  Event.h  ExtAnimator.h  FrameBufferObject.h  GameManager.h  GameObject.h  Gfx.h  Grabber.h  Grid.h  (+57 more)
jam/include/jam/core/: array.hpp  bmkextras.hpp  filesystem.h  geom.h  interfaces.hpp  math.h  rbtree.hpp  types.h
jam/include/precomph/: stdafx.h  targetver.h
jam/shaders/: default_shader_lit.frag  default_shader_lit.vert  default_shader_unlit.frag  default_shader_unlit.vert  normal_mapping_shader.frag  normal_mapping_shader.vert  screen_shader.frag  screen_shader.vert  skinning_shader_lit.frag  skinning_shader_lit.vert  skybox_shader.frag  skybox_shader.vert
jam/src/: Achievement.cpp  Action.cpp  ActionEase.cpp  ActionInstant.cpp  ActionInterval.cpp  ActionManager.cpp  AliveSprite.cpp  Anim2d.cpp  Animation2dManager.cpp  Application.cpp  AudioManager.cpp  AutoReleasePool.cpp  B2Sprite.cpp  BankItem.cpp  BankItemHolder.cpp  Base64.cpp  ButtonNode.cpp  Camera.cpp  Circle2f.cpp  CollisionManager.cpp  Color.cpp  Component.cpp  Configurator.cpp  DeviceManager.cpp  Dir.cpp  Draw2d.cpp  Draw3dBatch.cpp  Draw3dManager.cpp  DrawItem.cpp  DrawItemManager.cpp  Event.cpp  ExtAnimator.cpp  FrameBufferObject.cpp  GameManager.cpp  GameObject.cpp  Gfx.cpp  Grabber.cpp  Grid.cpp  InputManager.cpp  Layer.cpp  (+48 more)
jam/src/core/: filesystem.cpp  geom.cpp  math.cpp
jampsys/: CMakeLists.txt  PSys.cpp  PSys.h  PSys_Emitter.cpp  PSys_Emitter.h  PSys_Globals.h  PSys_Particle.hpp  PSys_Particle3D.cpp  PSys_Particle3D.h  PSys_ParticleConfigurator.cpp  PSys_ParticleConfigurator.h  PSys_ParticleSprite3D.cpp  PSys_ParticleSprite3D.h  PSys_Status.h  ParticleSystem.cpp  stdafx.h
tests/FallingBoxes/: CMakeLists.txt  FallingBoxes.cpp  FallingBoxes.h
tests/SpritesDemo/: CMakeLists.txt  SpritesDemo.cpp  SpritesDemo.h
tests/TestCubeMap/: CMakeLists.txt  TestCubeMap.cpp
tests/TestCubeMap/images/: arrakisday_dn.tga  arrakisday_up.tga
tests/TestEvents/: CMakeLists.txt  TestEvents.cpp
tests/TestFrameBuffer/: CMakeLists.txt  Quad2D.cpp  Quad2D.h  TestFrameBuffer.cpp
tests/TestImgui/: CMakeLists.txt  TestImgui.cpp  imgui.ini
tests/TestInputManager/: CMakeLists.txt  TestInputManager.cpp  main.cpp
tests/TestMesh/: CMakeLists.txt  TestMesh.cpp
tests/TestNormalMapping/: CMakeLists.txt  TestNormalMapping.cpp
tests/TestPSys/: CMakeLists.txt  PSysUtilities.cpp  PSysUtilities.h  PerformanceWindow.cpp  PerformanceWindow.h  TestPSys.cpp  imgui.ini  main.cpp
tests/TestPrimitives/: CMakeLists.txt  TestPrimitives.cpp
tests/TestSkinnedMesh/: CMakeLists.txt  TestSkinnedMesh.cpp
tests/TestSkinnedMesh/models/jaiqua/: jaiqua.material  jaiqua.mesh.xml  jaiqua.skeleton.xml
tests/TestSkinnedMesh/models/ninja/: ninja.material
tests/TestSpritesZOrder/: CMakeLists.txt  TestSpritesZOrder.cpp  TestSpritesZOrder.h
